examples/bad/type3.swifty
var x = 5
print x[0] // x is an integer, not an array

print x.a // nor struct
